--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -1,4 +1,4 @@
-specVersion: 0.0.1
+specVersion: 0.0.2
 schema:
   file: ./schema.graphql
 dataSources:
@@ -8,34 +8,17 @@ dataSources:
     source:
       address: "0x72a19342e8F1838460eBFCCEf09F6585e32db86E"
       abi: CvxLockerV2
+      startBlock: 14320609
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.5
       language: wasm/assemblyscript
       entities:
-        - KickReward
-        - OwnershipTransferred
-        - Recovered
-        - RewardAdded
-        - RewardPaid
         - Staked
-        - Withdrawn
       abis:
         - name: CvxLockerV2
           file: ./abis/CvxLockerV2.json
       eventHandlers:
-        - event: KickReward(indexed address,indexed address,uint256)
-          handler: handleKickReward
-        - event: OwnershipTransferred(indexed address,indexed address)
-          handler: handleOwnershipTransferred
-        - event: Recovered(address,uint256)
-          handler: handleRecovered
-        - event: RewardAdded(indexed address,uint256)
-          handler: handleRewardAdded
-        - event: RewardPaid(indexed address,indexed address,uint256)
-          handler: handleRewardPaid
         - event: Staked(indexed address,indexed uint256,uint256,uint256,uint256)
           handler: handleStaked
-        - event: Withdrawn(indexed address,uint256,bool)
-          handler: handleWithdrawn
       file: ./src/mapping.ts
